# IR_for_CVQKD

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake-multi-platform.yml  codeql.yml  main.yml  wheels.yml
IR_lib/: CMakeLists.txt  pybind11.cmake
IR_lib/cpp/: CMakeLists.txt
IR_lib/cpp/include/: information_reconciliation
IR_lib/cpp/include/h_files/: reconciliation.hpp  utilities.hpp
IR_lib/cpp/include/h_files/reconciliation/: CRC.hpp  MDR.hpp  QRNG.hpp  decoder.hpp
IR_lib/cpp/include/h_files/utilities/: statistics.hpp
IR_lib/cpp/src/: reconciliation.cpp  utilities.cpp
IR_lib/cpp/src/reconciliation/: CRC.cpp  MDR.cpp  QRNG.cpp  decoder.cpp
IR_lib/cpp/src/utilities/: statistics.cpp
IR_lib/cpp/tests/: CMakeLists.txt
IR_lib/cpp/tests/data/: generate_data.m
IR_lib/cpp/tests/src/: use_case.cpp
IR_lib/python/: information_reconciliation.cpp  reconciliation.cpp  utilities.cpp
IR_lib/tests/: QOSST_integration_test.ipynb  use_case.ipynb  use_case2.ipynb
cmake/: FindSphinx.cmake
conda/: environment.yml
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile  requirements.txt
docs/source/: Installation.rst  conf.py  custom.css  examples.rst  index.rst  reconciliation.rst  troubleshooting.rst  utilities.rst
information_reconciliation/: __init__.py  _core.pyi
src/: CMakeLists.txt
src/cpp/PCM/: CN_degrees_R_0p2_R_0p01_RA.txt  CN_degrees_R_0p2_R_0p01_RA_SPPCOM_2.txt
src/cpp/include/h_files/: reconciliation.hpp  utilities.hpp
src/cpp/include/h_files/reconciliation/: QRNG.hpp  decoder.hpp
src/cpp/include/h_files/utilities/: print.hpp
src/cpp/src/: reconciliation.cpp
src/cpp/src/reconciliation/: MDR.cpp  QRNG.cpp  decoder.cpp
src/cpp/src/utilities/: print.cpp  statistics.cpp
src/cpp/tests/: CMakeLists.txt
src/python/: information_reconciliation.cpp  reconciliation.cpp  utilities.cpp
src/python_scripts/: QCrypt_script.ipynb  QCrypt_script_fixed_beta.ipynb
